# fastapi-templates

./: Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  example.env  pyproject.toml  setup.cfg  tox.ini
fastapi_templates/: constant.py  db.py  exception.py  main.py
fastapi_templates/database/: alembic.ini
fastapi_templates/database/migrations/: env.py
fastapi_templates/database/migrations/versions/: 35cbf8d4c1bd_tasks.py
fastapi_templates/services/tasks/: api.py  models.py  repository.py  schemas.py  views.py
scripts/: test.sh
tests/: conftest.py  factories.py
tests/test_tasks/: test_create_task.py  test_views.py
